* Bug #31639: adjusted CSS for button alignment
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@42762 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/umcEnhancedGrid.css
+++ b/management/univention-management-console-frontend/css/umcEnhancedGrid.css
@@ -1289,7 +1289,7 @@ html > body .dojoxGridSorted .dojoxGridCellSortFocus .dojoxGridSortBtnNested {
 	background: #e0eed5;
 }
 .umc .dojoxGridCell {
-	padding: 0.166em 0.416em;
+	padding: 0.25em 0.4em;
 	border-color: transparent #E5DAC8 #E5DAC8 transparent;
 }
 .dj_ie6 .umc .dojoxGridCell{
